dash-wiseiot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-wiseiot-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: dash-wiseiot-ensaas.yesiang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dash-grafana
            port:
              number: 3000
